added package-lock to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,12 @@
 /client/node_modules
 /client/.pnp
 /client/.pnp.js
+/client/package-lock.json
+
 
 /server/node_modules
+/server/package-lock.json
+
 
 
 # testing
