--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,27 @@
 {
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongodb": "^5.8.1",
-    "mongoose": "^7.4.5"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "Backend for workout tracking application",
+	"main": "index.mjs",
+	"scripts": {
+		"start": "node index.mjs",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/sanyashetty/workout-app.git"
+	},
+	"author": "Sanya Shetty",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/sanyashetty/workout-app/issues"
+	},
+	"homepage": "https://github.com/sanyashetty/workout-app#readme",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"mongodb": "^5.8.1",
+		"mongoose": "^7.4.5"
+	}
 }
